--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,3 +1,12 @@
-body{padding:50px;font:14px "Lucida Grande", Helvetica, Arial, sans-serif}a{color:#00B7FF}
+body {
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: "LiGothic", "FangSong", Arial, serif;
+}
 
-/*# sourceMappingURL=style.css.map */
+a {
+  color: #00B7FF;
+}
+
+#pageMainContent {
+  padding-bottom: 128px;
+}
