--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,6 +7,8 @@
   <title>Sdorica</title>
 
   <link rel="stylesheet" href="css/icon.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/library/w3.css">
   <link rel="stylesheet" href="css/StableStatics.css">
 
