--- a/src/public/sass/StableStatics.sass
+++ b/src/public/sass/StableStatics.sass
@@ -1,4 +1,5 @@
 #stableStaticsTable
+  border-collapse: collapse
   tbody
     tr
       td:hover
@@ -22,3 +23,11 @@
         border-left: 1px solid black
         background-color: #e8ffdb
     
+#stableStaticsSaveState
+  position: fixed
+  width: 100px
+  right: 16px
+  bottom: 16px
+  background-color: white
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px
+  border-radius: 5px
