--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,12 +10,27 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/library/w3.css">
+  <link rel="stylesheet" href="css/tooltip.css">
+
   <link rel="stylesheet" href="css/StableStatics.css">
+  <link rel="stylesheet" href="css/History.css">
 
   <script src="js/utils/promise.js"></script>
   <script src="js/utils/http_request.js"></script>
+  <script src="js/common.js"></script>
+
+  <!-- Pages _ Others -->
+  <script src="js/pages/history.js" type="text/javascript"></script>
+  <script src="js/pages/menu.js" type="text/javascript"></script>
+  <script src="js/pages/monsterSkills.js" type="text/javascript"></script>
   <script src="js/pages/stableStatics.js" type="text/javascript"></script>
-  <script src="js/pages/index.js" type="text/javascript"></script>
+  <!-- Pages _ Home -->
+  <script src="js/pages/home.js" type="text/javascript"></script>
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="modules/fontawesome-free-5.15.2-web/css/all.min.css">
+  <script src="modules/fontawesome-free-5.15.2-web/js/all.min.js"></script>
+
 </head>
 <body>
   <div class="w3-bar w3-black">
@@ -29,5 +44,9 @@
     class="w3-container"
   >
   </div>
+  <footer>
+    <!-- TODO -->
+    <!-- <i class="fab fa-github" style="color: #302F2F"></i> -->
+  </footer>
 </body>
 </html>
