--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -14,6 +14,10 @@
 
   <link rel="stylesheet" href="css/StableStatics.css">
   <link rel="stylesheet" href="css/History.css">
+
+  <script src="js/utils/promise.js"></script>
+  <script src="js/utils/http_request.js"></script>
+  <script src="js/common.js"></script>
   
   <!-- Local File Env -->
   <script src="js/for_static_env/pages/history.js"></script>
@@ -23,10 +27,6 @@
   <script src="js/for_static_env/pages/stableStatics.js"></script>
   <script src="js/for_static_env/utils.js"></script>
   <script src="js/for_static_env/data_monster.js"></script>
-
-  <script src="js/utils/promise.js"></script>
-  <script src="js/utils/http_request.js"></script>
-  <script src="js/common.js"></script>
 
   <!-- Pages -->
   <script src="js/pages/history.js" type="text/javascript"></script>
@@ -43,20 +43,49 @@
 
 </head>
 <body>
-  <div class="w3-bar w3-black">
+  <div  id="navBar" class="w3-bar w3-black">
     <div id="navHomeButton" class="w3-bar-item w3-button w3-hover-red w3-mobile">首頁</div>
     <div id="navStableStaticsButton" class="w3-bar-item w3-button w3-hover-green w3-mobile">獸廄統計</div>
     <div id="navMonsterSkillsButton" class="w3-bar-item w3-button w3-hover-blue w3-mobile">技能統計</div>
     <div id="navMenuButton" class="w3-bar-item w3-button w3-right">選單</div>
   </div>
   <div 
-    id="pageMainContent"
+    id="mainContentContainer"
     class="w3-container"
   >
+  </div>
+  <div id="loadingContent">
+    Loading
   </div>
   <footer>
     <!-- TODO -->
     <!-- <i class="fab fa-github" style="color: #302F2F"></i> -->
   </footer>
 </body>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+   https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.2.5/firebase-analytics.js"></script>
+
+<script>
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+var firebaseConfig = {
+  apiKey: "AIzaSyBYFQGhlEa8MaNWnSLfBl4ZUl5UONCQIeI",
+  authDomain: "wjprogramer-github-io.firebaseapp.com",
+  projectId: "wjprogramer-github-io",
+  storageBucket: "wjprogramer-github-io.appspot.com",
+  messagingSenderId: "928323409026",
+  appId: "1:928323409026:web:3863079dd663c7562f509b",
+  measurementId: "G-90M2W65XHK"
+};
+
+// Initialize Firebase
+firebase.initializeApp(firebaseConfig);
+firebase.analytics();
+</script>
+
 </html>
