--- a/src/public/sass/Menu.sass
+++ b/src/public/sass/Menu.sass
@@ -5,3 +5,7 @@
       flex-direction: row
       justify-content: center
       align-items: center
+      .left-icon-container    
+        width: 40px
+        display: inline-block
+        text-align: center
