--- a/src/public/sass/StableStatics.sass
+++ b/src/public/sass/StableStatics.sass
@@ -1,5 +1,8 @@
 #stableStaticsTable
   border-collapse: collapse
+  .monsterNumber
+    &.isZero
+      color: #d9d9d9
   tbody
     tr
       td:hover
